sfdx-source/force-app/main/default/objects/Account_Plan__c/Account_Plan__c.object-meta.xml
<CustomObject>
    <description>LEM-15222: This custom object represents the plan with in specific timeframe, will hold the selected VSP recommendations and will be associated with the business account.</description>
    <label>Account Plan</label>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>