sfdx-source/force-app/main/default/objects/Account_Plan__c/fields/Created_by_Role__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Role__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15222: It is used to indicate the role of the user who created the Account Plan.</description>
    <inlineHelpText>Indicates the role of the user who created the Account Plan.</inlineHelpText>
    <label>Created by Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>