sfdx-source/force-app/main/default/objects/Account_Plan__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15222: It is used to Indicate the date when the Account Plan becomes inactive.</description>
    <inlineHelpText>Indicates the date when the Account Plan becomes inactive for the account.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>