sfdx-source/force-app/main/default/objects/Account_Plan__c/fields/Predicted_Sales_Uplift__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Sales_Uplift__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15228: It is roll up of Predicted Sales Uplift $ from all Levers to the Account Plan level.</description>
    <label>Predicted Sales Uplift</label>
    <summarizedField>Lever__c.Predicted_Incremental_Sales__c</summarizedField>
    <summaryForeignKey>Lever__c.Account_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>