sfdx-source/force-app/main/default/objects/Account_Plan__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15222: It is used to Indicate the date when the Account Plan was created.</description>
    <formula>CreatedDate</formula>
    <inlineHelpText>Indicates the date when the Account Plan was created for the account.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>