sfdx-source/force-app/main/default/objects/Account_Plan__c/validationRules/Restrict_Account_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Account_Field</fullName>
    <active>true</active>
    <description>LEM-15222: It is used to restrict user to update on Account field and It will be populated during Account Plan creation</description>
    <errorConditionFormula>AND(
    NOT($Permission.Bypass_Account_Validation_Rules),
    ISCHANGED(Account__c)
)</errorConditionFormula>
    <errorMessage>You can&apos;t edit Account after creation of account plan</errorMessage>
</ValidationRule>