sfdx-source/force-app/main/default/objects/Account_Plan__c/validationRules/Restrict_Plan_Name_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Plan_Name_Field</fullName>
    <active>true</active>
    <description>LEM-15222: It is used to restrict user to update on Plan Name field as it should auto populate during creation.</description>
    <errorConditionFormula>AND(
    NOT($Permission.Bypass_Account_Validation_Rules),
    ISCHANGED(Name)
)</errorConditionFormula>
    <errorMessage>You can&apos;t edit Plan Name after creation of account plan</errorMessage>
</ValidationRule>