sfdx-source/force-app/main/default/objects/Account_Plan__c/listViews/My_Account_Plans.listView-meta.xml
<ListView>
    <fullName>My_Account_Plans</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Predicted_Sales_Uplift__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Created_by_Role__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>My Account Plans</label>
</ListView>